# VECTIS-AI

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_cell_snapshots.py  0003_snapshot_rollups.py
backend/scripts/: global_stress_test.py  run_demo_california.py  run_demo_liguria.py  stress_test.py
backend/tests/: conftest.py
backend/tests/agents/: test_simulation_agents.py
backend/tests/api/: test_api.py  test_cells.py  test_connector_status.py  test_dashboard_endpoints.py  test_history_api.py  test_terminal_stream.py  test_tiles.py
backend/tests/calibration/: test_backtest.py  test_data_acquisition.py  test_dataset.py  test_fit.py
backend/tests/digital_twin/: test_region_twin.py
backend/tests/ingress/: test_sluice.py
backend/tests/integration/: test_database.py  test_end_to_end_demo.py  test_langgraph_orchestrator.py  test_orchestrator.py
backend/tests/model/: test_evaluation.py  test_training.py
backend/tests/realtime/: test_attention.py  test_attention_load.py  test_bayesian_continuous.py  test_cell_id.py  test_connectors.py  test_demo_v3_live.py  test_foundations.py  test_global_grid_scale.py  test_global_ingestion.py  test_history.py  test_kalman.py  test_live_stream.py  test_overlay_and_firms.py  test_persistence.py  test_realtime_pipeline.py  test_retention.py  test_screening.py  test_screening_scale.py  test_shared_compute.py  test_state.py  test_streams.py  test_tiering.py  test_tiering_storm.py  test_watchlist_tiering.py
backend/tests/simulation/: test_driver_attribution.py  test_monte_carlo.py  test_multi_hazard.py  test_performance.py  test_probability.py
backend/tests/streaming/: test_realtime.py
backend/tests/unit/: test_agents_meta.py  test_pipeline.py  test_sample.py  test_schemas.py
backend/vectis/: __init__.py
backend/vectis/agents/: __init__.py  analyst.py  base.py  critic.py  discovery.py  langgraph_engine.py  ml_research.py  orchestrator.py  report.py  runtime.py  simulation.py
backend/vectis/api/: deps.py  main.py
backend/vectis/calibration/: __init__.py  backtest.py  fit.py
backend/vectis/core/: __init__.py  config.py  exceptions.py  logging.py  schemas.py
backend/vectis/data/: __init__.py  regions.py
backend/vectis/database/: __init__.py  base.py  models.py  repository.py  session.py
backend/vectis/digital_twin/: __init__.py  schemas.py
(+276 files in other folders)
