[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vectis"
version = "1.0.0"
description = "VECTIS — Autonomous Intelligence System for Decision Analysis"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "VECTIS Contributors" }]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "shap>=0.45",
    "joblib>=1.4",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests",
    "anyio>=4.4",
]
# Live data connectors (opt-in, require credentials).
live = [
    "requests>=2.32",
    "cdsapi>=0.7",
]
# Real Anthropic LLM provider (the default `mock` provider needs nothing).
llm = [
    "anthropic>=0.30",
]
# Optional LangGraph orchestration engine (VECTIS_ORCHESTRATOR=langgraph).
langgraph = [
    "langgraph>=0.2",
]
# Redis Streams broker for production event streaming (VECTIS_BROKER=redis).
redis = [
    "redis>=5.0",
]

[tool.setuptools.packages.find]
include = ["vectis*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
# E501: line length handled by formatter. B008: FastAPI's Depends() in defaults
# is the framework's intended pattern, not a bug.
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# LangGraph's StateGraph.add_node uses very strict generic overloads that reject
# a plain partial-update return type. This is third-party API friction, scoped to
# the LangGraph-backed modules only — the rest of the codebase stays strict.
[[tool.mypy.overrides]]
module = ["vectis.agents.langgraph_engine", "vectis.agents.board.team"]
disable_error_code = ["call-overload"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: end-to-end orchestrator/pipeline tests",
    "model: ML metric-threshold tests",
    "slow: heavy performance/stress tests (e.g. 1M Monte Carlo scenarios)",
]
